syntax = "proto3";

package proto.consumermetadatapb;

option go_package = "AKFAK/proto/consumermetadatapb";

message Assignment {
    string topicName = 1;
    int32 partitionIndex = 2;
    int32 offset = 3;
    int32 broker = 4;
}

message ConsumerGroup {
    int32 ID = 1;
    repeated Assignment assignments = 2;
}

message MetadataConsumerState {
    repeated ConsumerGroup consumerGroups = 1;
}

