syntax = "proto3";

package proto.zkmessagepb;

option go_package = "AKFAK/proto/zkmessagepb";

import "proto/clustermetadatapb/cluster_metadata.proto";
import "proto/consumermetadatapb/consumer_metadata.proto";

message GetConsumerMetadataRequest {
  clustermetadatapb.MetadataBroker broker = 1;
}
message GetConsumerMetadataResponse {
  consumermetadatapb.MetadataConsumerState consumerMetadata = 1;
}
